<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RestablecerPassActivity">

    <EditText
        android:id="@+id/editTextEmailAddressRes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_log"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">
        <Button
            android:id="@+id/buttonIniciar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/yellow_border_bottom"
            android:layout_margin="15dp"
            android:text="@string/login" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/yellow_start_border_bottom"
            android:layout_margin="15dp"
            android:text="@string/register" />
        <Button
            android:id="@+id/buttonRestablecer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/yellow_end_border_bottom"
            android:text="@string/recover" />
    </LinearLayout>
</LinearLayout>